crates/cyrs-plan/src/snapshots/cyrs_plan__lower__tests__plan_create_rel.snap
---
source: crates/cyrs-plan/src/lower.rs
expression: render(&plan)
---
read_ops: 2
write_ops: 3
var_map_entries: 2
op[0]: Source(label=["Person"], bind=0)
op[1]: Source(label=["Person"], bind=1)
write[0]: CreateNode(labels=[], bind=Some(0))
write[1]: CreateNode(labels=[], bind=Some(1))
write[2]: CreateRel(type=KNOWS, bind=None)
