crates/cyrs-plan/src/snapshots/cyrs_plan__lower__tests__plan_detach_delete.snap
---
source: crates/cyrs-plan/src/lower.rs
expression: render(&plan)
---
read_ops: 1
write_ops: 1
var_map_entries: 1
op[0]: Source(label=None, bind=0)
write[0]: Delete(detach=true, targets=1)
