crates/cyrs-plan/src/snapshots/cyrs_plan__lower__tests__plan_match_where_pretty_tree.snap
---
source: crates/cyrs-plan/src/lower.rs
expression: pretty(&plan)
---
Project [$0 AS _v0]
  Filter (($0.x = 1))
    Source (AS $0)
